🌱 refactor: ocr rawresponse 정규화 수정