@@ -2,94 +2,162 @@ package com.calendarbox.backend.expense.support;
 
 import com.calendarbox.backend.expense.dto.response.NormalizedReceipt;
 
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
+import java.time.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class OcrNormalize {
 
     public static NormalizedReceipt normalize(Map<String, Object> raw) {
+        NormalizedReceipt v2 = parseV2(raw);
+        if (v2 != null && (v2.totalAmount() > 0 || !v2.items().isEmpty())) {
+            return v2;
+        }
+        NormalizedReceipt legacy = parseLegacy(raw);
+        if (legacy != null) return legacy;
+        return new NormalizedReceipt("영수증", null, 0L, List.of(), raw);
+    }
+
+    /* =============== V2 parser =============== */
+    private static NormalizedReceipt parseV2(Map<String, Object> raw) {
         try {
-            var images = (List<Map<String, Object>>) raw.get("images");
-            if (images == null || images.isEmpty()) {
-                throw new IllegalStateException("OCR 응답에 이미지 데이터가 없습니다.");
+            Map<String, Object> img0 = firstMapFromList(raw.get("images"));
+            if (img0 == null) return null;
+
+            long total = toLong(nested(img0, "totalPrice", "price", "formatted", "value"));
+
+            Map<String, Object> dateFmt = asMapOrNull(nested(img0, "paymentInfo", "date", "formatted"));
+            Map<String, Object> timeFmt = asMapOrNull(nested(img0, "paymentInfo", "time", "formatted"));
+            Instant paidAt = null;
+            if (dateFmt != null && timeFmt != null) {
+                int y = toInt(dateFmt.get("year"), 1970);
+                int m = toInt(dateFmt.get("month"), 1);
+                int d = toInt(dateFmt.get("day"), 1);
+                int hh = toInt(timeFmt.get("hour"), 0);
+                int mm = toInt(timeFmt.get("minute"), 0);
+                int ss = toInt(timeFmt.get("second"), 0);
+                paidAt = ZonedDateTime.of(y, m, d, hh, mm, ss, 0, ZoneId.of("Asia/Seoul")).toInstant();
             }
 
-            var receipt = (Map<String, Object>) images.get(0).get("receipt");
-            if (receipt == null) throw new IllegalStateException("receipt 필드 없음");
+            // 상호명은 V2 공통 경로가 보장되진 않음 → 기본값 사용
+            String merchant = "영수증";
 
-            var result = (Map<String, Object>) receipt.get("result");
-            if (result == null) throw new IllegalStateException("result 필드 없음");
+            List<NormalizedReceipt.Item> items = new ArrayList<>();
+            Map<String, Object> sr0 = firstMapFromList(img0.get("subResults"));
+            if (sr0 != null) {
+                List<?> its = asListOrEmpty(sr0.get("items"));
+                for (Object it : its) {
+                    Map<String, Object> m = asMapOrNull(it);
+                    if (m == null) continue;
+                    String label = toStr(nested(m, "name", "text"), "항목");
+                    int qty = toInt(nested(m, "count", "formatted", "value"), 1);
+                    long unit = toLong(nested(m, "price", "unitPrice", "formatted", "value"));
+                    long line = toLong(nested(m, "price", "price", "formatted", "value"));
+                    if (unit == 0 && qty > 0) unit = line / Math.max(qty, 1);
+                    if (isBlank(label) && qty <= 0 && line <= 0) continue;
+                    items.add(new NormalizedReceipt.Item(isBlank(label) ? "항목" : label, qty, unit, line));
+                }
+            }
 
-            var storeInfo = (Map<String, Object>) result.get("storeInfo");
-            var totalPrice = (Map<String, Object>) result.get("totalPrice");
-            var paymentInfo = (Map<String, Object>) result.get("paymentInfo");
-            var subResults = (List<Map<String, Object>>) result.get("subResults");
+            return new NormalizedReceipt(merchant, paidAt, total, items, raw);
+        } catch (Exception e) {
+            return null; // 폴백으로 넘김
+        }
+    }
 
-            String merchantName = Optional.ofNullable(storeInfo)
-                    .map(m -> (String) m.get("name"))
-                    .orElse("영수증");
+    /* =============== Legacy(V1) parser =============== */
+    private static NormalizedReceipt parseLegacy(Map<String, Object> raw) {
+        try {
+            Map<String, Object> img0 = firstMapFromList(raw.get("images"));
+            if (img0 == null) return null;
 
-            long totalAmount = Optional.ofNullable(totalPrice)
-                    .map(t -> Long.parseLong((String) t.get("price")))
-                    .orElse(0L);
+            Map<String, Object> receipt = asMapOrNull(img0.get("receipt"));
+            Map<String, Object> result  = asMapOrNull(receipt != null ? receipt.get("result") : null);
+            if (result == null) return null;
 
-            String dateStr = Optional.ofNullable(paymentInfo)
-                    .map(p -> (String) p.get("date"))
-                    .orElse(null);
+            Map<String, Object> storeInfo   = asMapOrNull(result.get("storeInfo"));
+            Map<String, Object> totalPrice  = asMapOrNull(result.get("totalPrice"));
+            Map<String, Object> paymentInfo = asMapOrNull(result.get("paymentInfo"));
+
+            String merchant = toStr(storeInfo != null ? storeInfo.get("name") : null, "영수증");
+            long total = toLong(totalPrice != null ? totalPrice.get("price") : null);
 
             Instant paidAt = null;
+            String dateStr = toStr(paymentInfo != null ? paymentInfo.get("date") : null, null);
             if (dateStr != null) {
                 try {
-                    DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-                    paidAt = LocalDateTime.parse(dateStr, fmt)
-                            .atZone(ZoneId.systemDefault())
-                            .toInstant();
+                    var fmt = java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+                    paidAt = LocalDateTime.parse(dateStr.replace("  ", " ").trim(), fmt)
+                            .atZone(ZoneId.systemDefault()).toInstant();
                 } catch (Exception ignore) { }
             }
 
-            // 세부 항목 (items)
-            List<NormalizedReceipt.Item> items = Collections.emptyList();
-            if (subResults != null && !subResults.isEmpty()) {
+            List<NormalizedReceipt.Item> items = List.of();
+            List<?> subResults = asListOrEmpty(result.get("subResults"));
+            if (!subResults.isEmpty()) {
                 items = subResults.stream()
-                        .map(sr -> (List<Map<String, Object>>) sr.get("items"))
+                        .map(OcrNormalize::asMapOrNull)
                         .filter(Objects::nonNull)
+                        .map(sr -> asListOrEmpty(sr.get("items")))
                         .flatMap(List::stream)
-                        .map(OcrNormalize::mapToItem)
+                        .map(OcrNormalize::mapLegacyItem)
                         .collect(Collectors.toList());
             }
 
-            return new NormalizedReceipt(merchantName, paidAt, totalAmount, items, raw);
-
-
+            return new NormalizedReceipt(merchant, paidAt, total, items, raw);
         } catch (Exception e) {
-            throw new RuntimeException("OCR 응답 파싱 실패: " + e.getMessage(), e);
+            return null;
         }
     }
 
-    private static NormalizedReceipt.Item mapToItem(Map<String, Object> map) {
-        String label = (String) map.get("name");
-        int qty = parseInt(map.get("count"));
-        long unit = parseLong(map.get("unitPrice"));
-        long lineAmount = parseLong(map.get("price"));
+    private static NormalizedReceipt.Item mapLegacyItem(Object obj) {
+        Map<String, Object> m = asMapOrNull(obj);
+        if (m == null) return new NormalizedReceipt.Item("항목", 1, 0, 0);
+        String label = toStr(m.get("name"), "항목");
+        int qty      = toInt(m.get("count"), 1);
+        long unit    = toLong(m.get("unitPrice"));
+        long line    = toLong(m.get("price"));
+        if (unit == 0 && qty > 0) unit = line / Math.max(qty, 1);
+        return new NormalizedReceipt.Item(label, qty, unit, line);
+    }
 
-        if(unit == 0 && qty > 0){
-            unit = lineAmount / qty;
+    /* =============== helpers =============== */
+    private static Map<String, Object> asMapOrNull(Object v) {
+        return (v instanceof Map<?, ?> m) ? castMap(m) : null;
+    }
+    @SuppressWarnings("unchecked")
+    private static Map<String, Object> castMap(Map<?, ?> m) {
+        return (Map<String, Object>) m;
+    }
+    private static List<?> asListOrEmpty(Object v) {
+        return (v instanceof List<?> l) ? l : List.of();
+    }
+    private static Map<String, Object> firstMapFromList(Object v) {
+        if (!(v instanceof List<?> l) || l.isEmpty()) return null;
+        Object first;
+        // JDK 21: l.getFirst(); 이하 호환 위해 0 사용
+        first = l.get(0);
+        return asMapOrNull(first);
+    }
+    private static Object nested(Map<String, Object> m, String... path) {
+        Object cur = m;
+        for (String k : path) {
+            if (!(cur instanceof Map<?, ?> mm)) return null;
+            cur = mm.get(k);
+            if (cur == null) return null;
         }
-        return new NormalizedReceipt.Item(label, qty, unit, lineAmount);
+        return cur;
     }
-
-
-    private static int parseInt(Object v) {
-        if (v == null) return 1;
-        try { return Integer.parseInt(v.toString()); } catch (Exception e) { return 1; }
+    private static boolean isBlank(String s) { return s == null || s.trim().isEmpty(); }
+    private static String toStr(Object v, String def) { return v == null ? def : String.valueOf(v).trim(); }
+    private static int toInt(Object v, int def) {
+        if (v == null) return def;
+        try { return Integer.parseInt(String.valueOf(v).replaceAll("[^0-9-]", "")); }
+        catch (Exception e) { return def; }
     }
-
-    private static long parseLong(Object v) {
-        if (v == null) return 0;
-        try { return Long.parseLong(v.toString()); } catch (Exception e) { return 0; }
+    private static long toLong(Object v) {
+        if (v == null) return 0L;
+        try { return Long.parseLong(String.valueOf(v).replaceAll("[^0-9-]", "")); }
+        catch (Exception e) { return 0L; }
     }
 }
